# SlicerHDBrainExtraction

./: CMakeLists.txt  HDBrainExtraction.xcf  README.md
HDBrainExtractionTool/: CMakeLists.txt  HDBrainExtractionTool.py
HDBrainExtractionTool/Resources/UI/: HDBrainExtractionTool.ui
